Added function of new Component - Settings. Added function to change information about profile

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,6 +1,7 @@
 .nav{
     grid-area: nav;
     background-color: rgb(50, 53, 59);
+    min-height: 100vh;
   }
   .nav div {
     margin: 0 0 20px 0;
